k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybernetics-agent
  namespace: cybernetics
  labels:
    app: cybernetics-agent
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: cybernetics-agent
